# er_mule_copier

./: .gitignore  Cargo.toml  LICENSE  README.md  cli-0.1.0-x86_64.AppImage  icon.png.png:Zone.Identifier
libs/: libEGL.so.1  libGL.so.1  libGLX.so.0  libGLdispatch.so.0  libOpenGL.so.0  libX11-xcb.so.1  libX11.so.6  libXau.so.6  libXcomposite.so.1  libXcursor.so.1  libXdamage.so.1  libXdmcp.so.6  libXext.so.6  libXfixes.so.3  libXi.so.6  libXinerama.so.1  libXrandr.so.2  libXrender.so.1  libatk-1.0.so.0  libatk-bridge-2.0.so.0  libatomic.so.1  libatspi.so.0  libblkid.so.1  libbrotlicommon.so.1  libbrotlidec.so.1  libbsd.so.0  libbz2.so.1.0  libcairo-gobject.so.2  libcairo.so.2  libcap.so.2  libcom_err.so.2  libdatrie.so.1  libdbus-1.so.3  libdrm.so.2  libdw.so.1  libelf.so.1  libenchant-2.so.2  libepoxy.so.0  libevdev.so.2  libffi.so.8  (+82 more)
src/: README.md  cli_app.rs  file_io.rs  gui_app.rs  helpers.rs  lib.rs  main.rs  save_model.rs  style.css
src/testing/: mod.rs  uitest.css  uitest.html
wix/: License.rtf  main.wxs
