[package]
name = "er_mule_copier"
version = "0.1.0"
edition = "2021"
authors = ["pubnoconst"]
license = "MIT"
description = "Copy characters from other save files in Elden Ring"

[[bin]]
name = "cli"

[[bin]]
name = "gui"

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
comfy-table = "6.1.4"
dirs-next = "2.0.0"
md5 = "0.7.0"
text_io = "0.1.12"
rfd = { version = "0.11.2", default-features = false,  features = ["xdg-portal"]}
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"

[package.metadata.appimage]
auto_link = true